cookie cart data solved

--- a/ecommerce/store/templates/store/cart.html
+++ b/ecommerce/store/templates/store/cart.html
@@ -34,7 +34,8 @@
 
                         <p class="quantity" style="padding:0">X {{item.quantity}}</p> &nbsp;
 						  <div class="quantity">
-                           
+                            <button data-product="{{product.id}}" id="customer-id" value="{{ request.session.customer_id|default:'AnonymousUser' }}" data-action="add" class="btn btn-outline-secondary add-btn update-cart" style="display:none">Add to Cart</button>
+
 
 							<img data-product="{{item.product.id}}" id="customer-id" data-action="add" value="{{ request.session.customer_id|default:'AnonymousUser' }}" class="chg-quantity update-cart" src="{% static  'images/arrow-up.png' %}">
 
@@ -48,4 +49,5 @@
             </div>
         </div>
     </div>
+
 {% endblock content %}
